# TTBAppProto

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh
.github/workflows/: ci.yml  deploy-azure.yml  main_tbbappproto.yml  main_ttblabelverifyer.yml
docs/: architecture.md  openapi.yaml
docs/examples/: batch-response.json  validate-request.json  validate-response.json
scripts/: generate_api_examples.py  generate_synthetic_test_dataset.py
static/: app.js  class_type_codes.tsv  styles.css
static/data/: countries.json  frontend_config.json
static/js/: api-client.js  form.js  guided-selection.js  main.js  render.js
templates/: index.html
tests/: test_app.py
tests/frontend/: form.behavior.test.mjs
tests/synthetic_dataset/: README.md  metadata.csv  metadata.json  metadata.jsonl
ttb_label_verifier/: __init__.py  frontend_data.py  ocr.py  request_models.py  routes.py  validation.py
ttb_label_verifier/validators/: __init__.py  definitions.py  parsing.py  policy.py  registry.py  rules.py  text.py
