[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttb-label-verifier"
version = "0.1.0"
description = "AI-assisted alcohol label verification prototype"
requires-python = ">=3.11"

[tool.black]
line-length = 80
target-version = ["py311", "py313"]

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
ignore = ["D203", "D213", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
